docs: add background-jobs & webapi-integration audit docs; misc pending updates
Documents the Orgatex import and ERP full-sync jobs, and the JobManagement
endpoints BGJOB calls into remotely, plus bundles other in-progress changes
(export service, job management) pending before this session.

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>